# worktree-status

./: LICENSE  README.md  index.html  package-lock.json  package.json  release-notes.md
.github/workflows/: publish-to-auto-release.yml
src/: App.scss  App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.conf.prod.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/macos/: icon.rs  mod.rs  path.rs  plist.rs
src-tauri/src/windows/: icon.rs  mod.rs  path.rs
src/actions/: get_branch_state.ts  get_default_actions.ts  hide_on_focus_lost.ts  launch_app.ts  scan_directory.ts
src/components/: Actions.tsx  DirectoryStatus.tsx  Header.module.css  Header.tsx  Shortcut.tsx  Updater.tsx  Worktree.tsx
src/components/Configuration/: ActionForm.tsx  ActionModal.tsx  Actions.tsx  Configuration.tsx  Paths.tsx  Settings.tsx
src/contexts/: ActionContext.ts  WorktreeStatusContext.ts
src/types/: Action.ts  BranchState.ts  Config.ts  DirectoryResult.ts  Setting.ts  WorktreePath.ts  index.ts
