[package]
name = "worktree-status"
version = "0.4.0"
description = "WorkTree Status - Git Worktree Status"
authors = ["Sander Cox <sander@paralleldimension.nl>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "worktree_status_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [ "tray-icon" ] }
tauri-plugin-shell = "2.2.2"
tauri-plugin-single-instance = "2.2.4"
tauri-plugin-store = "2.2.1"
tauri-plugin-dialog = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = { version = "0.20.2", features = ["vendored-libgit2"] }
plist = "1.7.0"
urlencoding = "2.1.3"
tauri-plugin-process = "2"
directories = "6.0.0"
regex = "1.11.1"
shell-words = "1.1.0"

[target.'cfg(target_os = "windows")'.dependencies]
systemicons = "0.9.13"

[target.'cfg(target_os = "macos")'.dependencies]
icns = "0.3.1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-positioner = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-updater = "2.8.0"
tauri-plugin-autostart = "2.4.0"

#[patch.crates-io]
#tauri = { git = "https://github.com/tauri-apps/tauri", branch = "dev" }
